k8/contento-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: contento-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mycontento.com
      http:
        paths:
          - backend:
              serviceName: contento-client-svc
              servicePort: 80
    - host: api.mycontento.com
      http:
        paths:
          - backend:
              serviceName: contento-server-svc
              servicePort: 80
